Salesforce CPQ/main/default/objects/CustomActionCondition__c/fields/CustomAction__c.field-meta.xml
<CustomField>
    <fullName>CustomAction__c</fullName>
    <description>Custom Action that is running this Condition.</description>
    <inlineHelpText>Custom Action that is running this Condition.</inlineHelpText>
    <label>Custom Action</label>
    <referenceTo>CustomAction__c</referenceTo>
    <relationshipLabel>Custom Action Conditions</relationshipLabel>
    <relationshipName>Custom_Action_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>