Salesforce CPQ/main/default/objects/CustomActionCondition__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Field on Quote Line or Product Option object that is evaluated by this condition.</description>
    <inlineHelpText>Choose a field on the target object.</inlineHelpText>
    <label>Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>