Salesforce CPQ/main/default/objects/CustomActionCondition__c/fields/FilterValue__c.field-meta.xml
<CustomField>
    <fullName>FilterValue__c</fullName>
    <description>Value to evaluate against.</description>
    <inlineHelpText>Enter the value you want to match in the field you selected using the operator chosen.</inlineHelpText>
    <label>Filter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>