Salesforce CPQ/main/default/objects/CustomActionCondition__c/fields/ParentActionIsActive__c.field-meta.xml
<CustomField>
    <fullName>ParentActionIsActive__c</fullName>
    <formula>CustomAction__r.Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ParentConditionIsActive</label>
    <type>Checkbox</type>
</CustomField>